<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Welcome to SMART MEDIC REMINDER</string>
    <string name="app_name">SMART MEDIC REMINDER</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="setTime">Time Set is:</string>
    <string name="key_value">KEY_PLACE</string>
    <string name="title_activity_show_history">ShowHistoryActivity</string>
    <string name="title_activity_set_phone_number">SetPhoneNumberActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    
    <string name="item1">Medicine Name:</string>
    <string name="item2">Type in Medicine Name</string>
    <string name="item3">Dosage</string>    
    <string name="item4">Click the button to set Date:</string>
    <string name="item5">Set Reminder Date</string>
    <string name="item6">Click the button to set time:</string>
    <string name="item7">Set Reminder Time</string>
    <string name="item8">Save Reminder-Once</string>
    <string name="item9">Set Reminder Time-Daily</string>
    
    <string name="item10">Have you taken the medicine?</string>
    <string name="item11">No</string>
    <string name="item12">Yes</string>
        
    <string name="item13">Type in the phone number you want to contact</string>
    <string name="item14">Save Phone Number</string>
    
    
</resources>
